syntax = "proto3";

option go_package="/.;proto";
//引入protobuf的内置类型
import "google/protobuf/timestamp.proto";

//生成客户端和服务代码：
// protoc --go-grpc_out=:. --go_out=. ./hello.proto
// protoc --go-grpc_out=require_unimplemented_servers=false:. --go_out=. ./hello.proto

//定义接口
service Greeter {
  rpc SayHello (HolleRequest) returns (HelloReply);
}

//枚举类型
enum Gender{
  MALE = 0;
  FE_MALE = 1;
}

message HolleRequest {
  string name = 1;
  string url = 2;
  Gender gender = 3;
  map<string, string> m = 4;  //proto map类型
  google.protobuf.Timestamp addTime = 5;  //protobuf的内置类型
}

message HelloReply {
  string id = 1;
  HolleRequest request = 2;
}